--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,15 @@ spring:
       jpa:
          hibernate:
                   ddl-auto: validate
-         properties:
-                  hibernate:
-                          dialect: org.hibernate.dialect.MySQL5Dialect
-         generate-ddl: false
+         generate-ddl: true
+#         properties:
+#                  hibernate:
+#                          dialect: org.hibernate.dialect.HSQLDialect
+         show-sql: true
 
       datasource:
                 platform: hsqldb
+                url: jdbc:hsqldb:mem:test;shutdown=true;sql.syntax_ora=true;hsqldb.tx=mvcc
 
 
 geoIp:
