Changed test db to H2

--- a/src/integration-test/resources/application-integrationTest.yml
+++ b/src/integration-test/resources/application-integrationTest.yml
@@ -3,7 +3,7 @@ spring:
         active: integrationTest
       jpa:
          hibernate:
-                  ddl-auto: create
+                  ddl-auto: validate
          generate-ddl: false
          show-sql: true
          properties:
