Rearranged test directory

--- a/pom.xml
+++ b/pom.xml
@@ -135,14 +135,17 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                        <excludes><exclude>com.mahull.zeus.it.*IT</exclude></excludes>
+                        <excludedGroups>integrationTest</excludedGroups>
+                    <includes><include>*</include></includes>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
-                    <includes><include>com.mahull.zeus.it.*IT</include></includes>
+                    <groups>integrationTest</groups>
+                    <includes><include>*</include></includes>
+                    <testSourceDirectory>src/integration-test/java</testSourceDirectory>
                 </configuration>
             </plugin>
             <plugin>
